--- a/Node-Mongodb/.env
+++ b/Node-Mongodb/.env
@@ -1,2 +1,2 @@
-DB_URL=mongodb+srv://sangdoan:H8Hplr3cAG7F05GW@cluster0.wh5cjot.mongodb.net/?retryWrites=true&w=majority
-PORT=3000
+DB_URL=mongodb+srv://sangdoan:M7N1asJbsdA82OWv@cluster0.wh5cjot.mongodb.net/?retryWrites=true&w=majority
+PORT=5000
